--- a/Tasks/update-dependencies/task.yaml
+++ b/Tasks/update-dependencies/task.yaml
@@ -5,3 +5,8 @@ name: update-dependencies
 description: Updates the dependencies for the DevBox
 author: Microsoft Corporation
 command: ".\\update-dependencies.ps1"
+documentation:
+  notes: This task is used to update all the DevBox dependencies such as Azure Resource Manager, GitHub CLI, Azure and Azure Developer CLI.
+  examples:
+    - name: update-dependencies
+      description: Install Docker Desktop
