--- a/Tasks/Workloads/backEnd/workload.yaml
+++ b/Tasks/Workloads/backEnd/workload.yaml
@@ -37,7 +37,7 @@ tasks:
     parameters:
       marketplaceItemName: ms-kubernetes-tools.vscode-aks-tools	
   - name: git-clone
-    description: Clone eShopOnContainers repository into C:\Workspaces
+    description: Clone Microsoft DevBox repository into C:\Workspaces
     parameters:
-      repositoryUrl: https://github.com/Evilazaro/eShopOnContainers.git
+      repositoryUrl: https://github.com/Evilazaro/MicrosoftDevBox.git
       directory: C:\Workspaces
