Add docker and Postman customizations

--- a/Tasks/Workloads/backEnd/workload.yaml
+++ b/Tasks/Workloads/backEnd/workload.yaml
@@ -46,3 +46,5 @@ tasks:
     parameters:
       repositoryUrl: https://github.com/dotnet/eShop.git
       directory: C:\Workspaces
+  - name: install-postman
+    description: Install Postman for Windows
