--- a/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
+++ b/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
@@ -3,6 +3,50 @@ name: "devbox-backend-customization"
 description: "Customize the backend workload for the devbox"
 tasks:
   - name: winget
+    description: Installing Power Toys
+    parameters:
+      package: Microsoft.PowerToys
+  - name: winget
+    description: Installing Dotnet SDK 8
+    parameters:
+      package: Microsoft.DotNet.SDK.8
+  - name: winget
+    description: Installing Dotnet Runtime 8
+    parameters:
+      package: Microsoft.DotNet.Runtime.8
+  - name: winget
+    description: Installing Microsoft.WindowsTerminal
+    parameters:
+      package: Microsoft.WindowsTerminal
+  - name: winget
+    description: Installing Microsoft.AzureCLI
+    parameters:
+      package: Microsoft.AzureCLI
+  - name: winget
+    description: Installing Microsoft.Azd
+    parameters:
+      package: Microsoft.Azd
+  - name: winget
+    description: Installing OpenJS.NodeJS
+    parameters:
+      package: OpenJS.NodeJS
+  - name: winget
+    description: Installing Microsoft.Azure.FunctionsCoreTools
+    parameters:
+      package: Microsoft.Azure.FunctionsCoreTools
+  - name: winget
+    description: Installing Git.Git
+    parameters:
+      package: Git.Git
+  - name: winget
+    description: Installing GitHub.cli
+    parameters:
+      package: GitHub.cli
+  - name: winget
+    description: Installing GitHub.GitHubDesktop
+    parameters:
+      package: GitHub.GitHubDesktop
+  - name: winget
     description: Installing Postman
     parameters:
       package: Postman.Postman
@@ -10,5 +54,19 @@ tasks:
     description: Installing Visual Studio Code
     parameters:
       package: Microsoft.VisualStudioCode
-  - name: install-docker
-    description: Installing Docker
+  - name: winget
+    description: Installing Docker.DockerDesktop
+    parameters:
+      package: Docker.DockerDesktop
+  - name: winget
+    description: Installing ServiceBusExplorer
+    parameters:
+      package: paolosalvatori.ServiceBusExplorer
+  - name: winget
+    description: Installing StorageExplorer
+    parameters:
+      package: Microsoft.Azure.StorageExplorer
+  - name: winget
+    description: Installing RemoteDesktopClient
+    parameters:
+      package: Microsoft.RemoteDesktopClient
