--- a/src/customizations/tasks/install-customizations/task.yaml
+++ b/src/customizations/tasks/install-customizations/task.yaml
@@ -7,4 +7,4 @@ parameters:
     required: true
     description: |
       Step of the installation process.
-command: ../powershell/customizationsOrchestrator.ps1 --step {{step}}
+command: ./customizationsOrchestrator.ps1 --step {{step}}
