--- a/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
+++ b/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
@@ -6,6 +6,25 @@ tasks:
     description: Install Windows Package Manager (winget)
   - name: install-wsl
     description: Install Windows Subsystem for Linux (WSL)
+  - name: powershell
+    description: Install Windows Terminal
+    command: Restart-Computer -Force
+  - name: instal-ubuntu
+    description: Install Ubuntu 20.04 LTS
+  - name: powershell
+    description: Install Windows Terminal
+    command: Restart-Computer -Force
+  - name: install-winget-packages
+    description: Install Windows Package Manager (winget) packages
+  - name: powershell
+    description: Install Windows Terminal
+    command: Restart-Computer -Force
+  - name: install-vs-extensions
+    description: Install Visual Studio Code extensions
+  - name: update-dotnet-workloads
+    description: Update .NET workloads
+  - name: update-winget-packages
+    description: Update Windows Package Manager (winget) packages
   - name: git-clone
     description: Cloning the Microsoft DevBox repository
     parameters:
