Adding author to the custom tasks

--- a/src/customizations/tasks/git-clone/task.yaml
+++ b/src/customizations/tasks/git-clone/task.yaml
@@ -3,7 +3,7 @@
 $schema: 1.0
 name: git-clone
 description: Clones a git repository.
-author: Microsoft Corporation
+author: Evilazaro Alves
 command: ./main.ps1 -RepositoryUrl {{ repositoryUrl }} -Directory {{ directory }} -Branch {{ branch }} -Pat {{ pat }}
 parameters:
   repositoryUrl:
