--- a/src/customizations/tasks/install-vs-extensions/task.yaml
+++ b/src/customizations/tasks/install-vs-extensions/task.yaml
@@ -1,4 +1,5 @@
 $schema: 1.0
 name: install-vs-extensions
 description: Install Visual Studio Code extensions
+author: Evilazaro Alves
 command: .\\installVSCodeExntesions.ps1
