--- a/src/customizations/tasks/install-winget-packages/task.yaml
+++ b/src/customizations/tasks/install-winget-packages/task.yaml
@@ -1,4 +1,5 @@
 $schema: 1.0
 name: install-winget-packages
 description: Install Windows Package Manager (winget) packages
+author: Evilazaro Alves
 command: .\\installWingetPackages.ps1
