--- a/src/customizations/tasks/install-winget/task.yaml
+++ b/src/customizations/tasks/install-winget/task.yaml
@@ -1,4 +1,5 @@
 $schema: 1.0
 name: install-winget
 description: Install Windows Package Manager (winget)
+author: Evilazaro Alves
 command: .\\instalWinget.ps1
