--- a/src/customizations/tasks/install-wsl/task.yaml
+++ b/src/customizations/tasks/install-wsl/task.yaml
@@ -1,4 +1,5 @@
 $schema: 1.0
 name: install-wsl
 description: Install Windows Subsystem for Linux (WSL)
+author: Evilazaro Alves
 command: .\\installWSL.ps1
