--- a/src/customizations/tasks/update-winget-packages/task.yaml
+++ b/src/customizations/tasks/update-winget-packages/task.yaml
@@ -1,4 +1,5 @@
 $schema: 1.0
 name: update-winget-packages
 description: Update Windows Package Manager (winget) packages
+author: Evilazaro Alves
 command: .\\updateWingetPackages.ps1
