--- a/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
+++ b/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
@@ -8,17 +8,20 @@ tasks:
     description: Install Windows Subsystem for Linux (WSL)
   - name: powershell
     description: Install Windows Terminal
-    command: Restart-Computer -Force
-  - name: instal-ubuntu
+    parameters:
+      command: Restart-Computer -Force
+  - name: install-ubuntu
     description: Install Ubuntu 20.04 LTS
   - name: powershell
     description: Install Windows Terminal
-    command: Restart-Computer -Force
+    parameters:
+      command: Restart-Computer -Force
   - name: install-winget-packages
     description: Install Windows Package Manager (winget) packages
   - name: powershell
     description: Install Windows Terminal
-    command: Restart-Computer -Force
+    parameters:
+      command: Restart-Computer -Force
   - name: install-vs-extensions
     description: Install Visual Studio Code extensions
   - name: update-dotnet-workloads
