--- a/src/customizations/tasks/install-wsl/task.yaml
+++ b/src/customizations/tasks/install-wsl/task.yaml
@@ -2,4 +2,4 @@ $schema: 1.0
 name: install-wsl
 description: Install Windows Subsystem for Linux (WSL)
 author: Evilazaro Alves
-command: .\\installWSL.ps1
+command: .\\installWsl.ps1
