--- a/src/customizations/tasks/customization-wsl/powershell/task.yaml
+++ b/src/customizations/tasks/customization-wsl/powershell/task.yaml
@@ -1,10 +1,9 @@
 # This is a simple powershell command execution task for Dev Box.
-
-$schema: 1.0
+$schema: "1.0"
 name: powershell
 description: Execute a powershell command.
 author: Microsoft Corporation
-command: ".\\Run-Command.ps1 -Command {{command}} -WorkingDirectory {{workingDirectory}}"
+command: ".\\Run-Command.ps1 -Command {{command}} -WorkingDirectory {{workingDirectory}} -RunAsUser {{runAsUser}}"
 parameters:
   command:
     type: string
@@ -16,6 +15,11 @@ parameters:
     default: ""
     required: false
     description: The working directory to execute the command in.
+  runAsUser:
+    type: boolean
+    default: false
+    required: false
+    description: execute the command when the user login the devbox at the first time.
 documentation:
   notes: This task is used to execute a powershell command.
   examples:
