--- a/src/customizations/tasks/winget/task.yaml
+++ b/src/customizations/tasks/winget/task.yaml
@@ -3,7 +3,7 @@
 $schema: 1.0
 name: winget
 description: Applies a winget configuration to the Dev Box.
-author: Evilazaro Alves
+author: Microsoft Corporation
 command: './main.ps1 -ConfigurationFile {{configurationFile}} -DownloadUrl {{downloadUrl}} -InlineConfigurationBase64 {{inlineConfigurationBase64}} -Package {{package}} -Version {{version}} -RunAsUser {{runAsUser}}'
 parameters:
   configurationFile:
