--- a/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
+++ b/src/customizations/tasks/workloads/backEndEngineer/backend.yaml
@@ -6,7 +6,11 @@ tasks:
     description: "Install Windows Subsystem for Linux"
     parameters:
         package: Microsoft.WSL
-  - name: winget
-    description: "Install Postman"
+  - name: powershell
+    description: "Install Visual Studio Code"
     parameters:
-        package: Postman.Postman
+        command: "winget install -e --id Microsoft.VisualStudioCode --source winget --accept-source-agreements --accept-package-agreements --silent --force"
+  - name: powershell
+    description: "Update winget packages"
+    parameters:
+        command: "winget upgrade --all -e --accept-source-agreements --accept-package-agreements --silent --force"
