--- a/src/customizations/tasks/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
+++ b/src/customizations/tasks/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
@@ -3,8 +3,98 @@ name: "devbox-backend-customization"
 description: "Customize the backend workload for the devbox"
 tasks:
   - name: winget
-    description: "Install Winget Packages"
+    description: "Install App Microsoft.AppInstaller"
     parameters:
-        downloadUrl: 'https://raw.githubusercontent.com/Evilazaro/MicrosoftDevBox/main/src/customizations/tasks/workloads/backEndEngineer/backEndEngineer-winget/dotnetDevMachineConfig.dsc.yaml'
-        configurationFile: 'C:\WinGetConfig\dotnetDevMachineConfig.dsc.yaml'
-        runAsUser: true
+      package: "Microsoft.AppInstaller"
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.PowerToys"
+    parameters:
+      package: Microsoft.PowerToys
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.DotNet.SDK.8"
+    parameters:
+      package: Microsoft.DotNet.SDK.8
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.DotNet.Runtime.8"
+    parameters:
+      package: Microsoft.DotNet.Runtime.8
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.WindowsTerminal"
+    parameters:
+      package: Microsoft.WindowsTerminal
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.AzureCLI"
+    parameters:
+      package: Microsoft.AzureCLI
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.Azd"
+    parameters:
+      package: Microsoft.Azd
+      runAsUser: true
+  - name: winget
+    description: "Install App OpenJS.NodeJS"
+    parameters:
+      package: OpenJS.NodeJS
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.Azure.FunctionsCoreTools"
+    parameters:
+      package: Microsoft.Azure.FunctionsCoreTools
+      runAsUser: true
+  - name: winget
+    description: "Install App Git.Git"
+    parameters:
+      package: Git.Git
+      runAsUser: true
+  - name: winget
+    description: "Install App GitHub.cli"
+    parameters:
+      package: GitHub.cli
+      runAsUser: true
+  - name: winget
+    description: "Install App GitHub.GitHubDesktop"
+    parameters:
+      package: GitHub.GitHubDesktop
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.VisualStudioCode"
+    parameters:
+      package: Microsoft.VisualStudioCode
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.VisualStudio.2022.Enterprise"
+    parameters:
+      package: Microsoft.VisualStudio.2022.Enterprise
+      runAsUser: true
+  - name: winget
+    description: "Install App Postman.Postman"
+    parameters:
+      package: "Microsoft.AppInstaller"
+      runAsUser: true
+  - name: winget
+    description: "Install App Docker.DockerDesktop"
+    parameters:
+      package: Docker.DockerDesktop
+      runAsUser: true
+  - name: winget
+    description: "Install App paolosalvatori.ServiceBusExplorer"
+    parameters:
+      package: paolosalvatori.ServiceBusExplorer
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.Azure.StorageExplorer"
+    parameters:
+      package: Microsoft.Azure.StorageExplorer
+      runAsUser: true
+  - name: winget
+    description: "Install App Microsoft.RemoteDesktopClient"
+    parameters:
+      package: Microsoft.RemoteDesktopClient
+      runAsUser: true
+  
