Updating powershell task to run as user

--- a/src/customizations/tasks/powershell/task.yaml
+++ b/src/customizations/tasks/powershell/task.yaml
@@ -16,6 +16,13 @@ parameters:
     default: ""
     required: false
     description: The working directory to execute the command in.
+  runAsUser:
+    default: false
+    type: 'boolean'
+    required: false
+    description: |
+      Whether to run the installation as the current user or as an administrator. 
+      If set to true, the installation will run during the user's first login to the machine.
 documentation:
   notes: This task is used to execute a powershell command.
   examples:
