add winget upgrade command to the workload

--- a/src/customizations/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
+++ b/src/customizations/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
@@ -94,4 +94,9 @@ tasks:
     parameters:
       package: Microsoft.RemoteDesktopClient
       runAsUser: true
+  - name: powershell
+    description: "Update all winget packages"
+    parameters:
+      command: "winget upgrade --all"
+      runAsUser: true
   
