--- a/src/customizations/tasks/powershell/task.yaml
+++ b/src/customizations/tasks/powershell/task.yaml
@@ -4,7 +4,7 @@ $schema: 1.0
 name: powershell
 description: Execute a powershell command.
 author: Microsoft Corporation
-command: ".\\Run-Command.ps1 -Command {{command}} -WorkingDirectory {{workingDirectory}}"
+command: ".\\Run-Command.ps1 -Command {{command}} -WorkingDirectory {{workingDirectory}} -RunAsUser {{runAsUser}}"
 parameters:
   command:
     type: string
