UPdating FrontEnd workload definition

--- a/src/customizations/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
+++ b/src/customizations/workloads/backEndEngineer/backEndEngineer-winget/workload.yaml
@@ -137,7 +137,7 @@ tasks:
         InstallVSCodeExtensions"
       runAsUser: true
   - name: powershell
-    description: "Update dotne workloads"
+    description: "Update dotnet workloads"
     parameters:
       command: "dotnet workload update"
       runAsUser: true
