--- a/src/customizations/workloads/backEndEngineer/workload.yaml
+++ b/src/customizations/workloads/backEndEngineer/workload.yaml
@@ -21,10 +21,12 @@ tasks:
     description: "Install App Microsoft.DotNet.SDK.8"
     parameters:
       package: Microsoft.DotNet.SDK.8
+      runAsUser: true
   - name: winget
     description: "Install App Microsoft.DotNet.Runtime.8"
     parameters:
       package: Microsoft.DotNet.Runtime.8
+      runAsUser: true
   - name: winget
     description: "Install App Microsoft.WindowsTerminal"
     parameters:
@@ -34,26 +36,32 @@ tasks:
     description: "Install App Microsoft.AzureCLI"
     parameters:
       package: Microsoft.AzureCLI
+      runAsUser: true
   - name: winget
     description: "Install App Microsoft.Azd"
     parameters:
       package: Microsoft.Azd
+      runAsUser: true
   - name: winget
     description: "Install App OpenJS.NodeJS"
     parameters:
       package: OpenJS.NodeJS
+      runAsUser: true
   - name: winget
     description: "Install App Microsoft.Azure.FunctionsCoreTools"
     parameters:
       package: Microsoft.Azure.FunctionsCoreTools
+      runAsUser: true
   - name: winget
     description: "Install App Git.Git"
     parameters:
       package: Git.Git
+      runAsUser: true
   - name: winget
     description: "Install App GitHub.cli"
     parameters:
       package: GitHub.cli
+      runAsUser: true
   - name: winget
     description: "Install App GitHub.GitHubDesktop"
     parameters:
