--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -7,7 +7,7 @@ on:
             - main
 
 jobs:
-    deploy:
+    Deploy-DevBox-To-Azure:
         runs-on: ubuntu-latest
 
         steps:
@@ -20,6 +20,7 @@ jobs:
             client-id: ${{ secrets.AZURE_CLIENT_ID }}
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
         # Verify Azure CLI login by listing subscriptions (optional step)
         - name: Verify login by listing subscriptions
