fixing azure credentials

--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -11,34 +11,36 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: Checkout repository
-          uses: actions/checkout@v2
+          - name: Checkout repository
+            uses: actions/checkout@v2
 
-        - name: Log in to Azure
-          uses: azure/login@v1
-          with:
-            client-id: ${{ secrets.AZURE_CLIENT_ID }}
-            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          - name: Log in to Azure
+            uses: azure/login@v1
+            with:
+              creds: ${{ secrets.AZURE_CREDENTIALS }}
+              # client-id: ${{ secrets.AZURE_CLIENT_ID }}
+              # tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+              # client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+              # subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+              # auth-method: service-principal
 
-        # Verify Azure CLI login by listing subscriptions (optional step)
-        - name: Verify login by listing subscriptions
-          run: az account show
+          # Verify Azure CLI login by listing subscriptions (optional step)
+          - name: Verify login by listing subscriptions
+            run: az account show
 
-        # Perform other tasks, e.g., deploying to Azure or running scripts
-        - name: Deploy resources
-          run: |
-            az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        # Add more Azure CLI or deployment commands here
+          # Perform other tasks, e.g., deploying to Azure or running scripts
+          - name: Deploy resources
+            run: |
+              az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          # Add more Azure CLI or deployment commands here
 
-        # - name: Deploy Bicep script
-        #   uses: azure/arm-deploy@v1
-        #   with:
-        #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        #     resourceGroupName: myResourceGroup
-        #     template: ./path/to/your/template.bicep
-        #     parameters: |
-        #         parameter1=${{ secrets.PARAMETER1 }}
-        #         parameter2=${{ secrets.PARAMETER2 }}
+          # - name: Deploy Bicep script
+          #   uses: azure/arm-deploy@v1
+          #   with:
+          #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          #     resourceGroupName: myResourceGroup
+          #     template: ./path/to/your/template.bicep
+          #     parameters: |
+          #         parameter1=${{ secrets.PARAMETER1 }}
+          #         parameter2=${{ secrets.PARAMETER2 }}
 
