--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -21,12 +21,13 @@ jobs:
 
           # Verify Azure CLI login by listing subscriptions (optional step)
           - name: Verify login by listing subscriptions
-            run: echo ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
-
-          # # Perform other tasks, e.g., deploying to Azure or running scripts
-          # - name: Deploy resources
-          #   run: |
-          #     az account set --subscription ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
+            uses: azure/CLI@v2
+            with:
+              azcli-version: latest
+              inlineScript: |
+                az account show
+                az account set --subscription ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
+                az account list --output table
           # Add more Azure CLI or deployment commands here
 
           # - name: Deploy Bicep script
