--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -18,3 +18,6 @@ jobs:
             uses: azure/login@v2
             with:
               creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+          - name: Create Resources Organization
+            run: az group create --name DevBoxResourceGroup --location eastus
