--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -20,4 +20,4 @@ jobs:
               creds: ${{ secrets.AZURE_CREDENTIALS }}
 
           - name: Create Resources Organization
-            run: ls
+            run: ./src/deploy/bicep/bash/deployResourcesOrganization.sh
