--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -36,7 +36,7 @@ jobs:
 
         steps:
           - name: Checkout repository
-            uses: actions/checkout@v2
+            uses: actions/checkout@v3
 
           - name: Log in to Azure
             uses: azure/login@v2
@@ -55,5 +55,6 @@ jobs:
               subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
               resourceGroupName: ${{ env.managementResourceGroupName }}
               template: ./src/deploy/bicep/management/deploy.bicep
-              parameters: 'logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}'
+              parameters: |
+                logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}
 
