--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -58,4 +58,5 @@ jobs:
               template: ./src/deploy/bicep/management/deploy.bicep
               parameters: |
                 logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}
+                failOnStdErr: false
 
