--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -44,6 +44,9 @@ jobs:
             with:
               creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+          - name: Bicep Upgrade
+            run: az bicep upgrade
+
           - name: Give execute permissions to the script
             run: chmod +x ./src/deploy/bicep/bash/deployResourcesOrganization.sh
 
