--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -32,7 +32,7 @@ env:
   logAnalyticsWorkspaceName: "eShopPetDevBoxLogAnalytics"
 
 jobs:
-    Deploy-DevBox-To-Azure:
+    SetupEnvironment:
         runs-on: ubuntu-latest
 
         steps:
@@ -50,6 +50,10 @@ jobs:
           - name: Give execute permissions to the script
             run: chmod +x ./src/deploy/bicep/bash/deployResourcesOrganization.sh
 
+    ProvisionAzureResources:
+        runs-on: ubuntu-latest
+        needs: SetupEnvironment
+        steps:
           - name: Create Resources Organization
             run: ./src/deploy/bicep/bash/deployResourcesOrganization.sh
 
@@ -61,5 +65,4 @@ jobs:
               template: ./src/deploy/bicep/management/deploy.bicep
               parameters: |
                 logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}
-                failOnStdErr: 'false'
 
