--- a/.github/workflows/depoyDevBox.yaml
+++ b/.github/workflows/depoyDevBox.yaml
@@ -32,7 +32,7 @@ env:
   logAnalyticsWorkspaceName: "eShopPetDevBoxLogAnalytics"
 
 jobs:
-    SetupEnvironment:
+    DeployDevBoxAsAService:
         runs-on: ubuntu-latest
 
         steps:
@@ -62,3 +62,16 @@ jobs:
               parameters: |
                 logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}
 
+          - name: Deploy Network Connectivity Resources
+            uses: azure/arm-deploy@v1
+            with:
+              subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
+              resourceGroupName: ${{ env.networkResourceGroupName }}
+              template: ./src/deploy/bicep/network/deploy.bicep
+              parameters: |
+                networkResourceGroupName=${{ env.networkResourceGroupName }}
+                vnetName=${{ env.vnetName }}
+                subNetName=${{ env.subNetName }}
+                networkConnectionName=${{ env.networkConnectionName }}
+                logAnalyticsWorkspaceName=${{ env.logAnalyticsWorkspaceName }}
+                managementResourceGroupName=${{ env.managementResourceGroupName }}
